--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
     "name": "elegant",
-    "version": "0.9.2",
+    "version": "0.9.3",
     "description": "frame work for node js",
     "main": "index.js",
     "dependencies": {
-        "clean-css": "~1.1.7",
         "clone": "~0.1.11",
         "commander": "~2.1.0",
         "elegant-controller": "~0.9.0",
         "elegant-error": "~0.9.0",
-        "elegant-interceptor": "~0.9.0",
         "elegant-file": "~0.9.0",
+        "elegant-interceptor": "~0.9.0",
         "elegant-redirect": "~0.9.0",
-        "elegant-settings": "~0.9.0",
+        "elegant-config": "~0.9.0",
         "elegant-sync": "~0.9.0",
-        "extend": "~1.1.3",
-        "mysql": "~2.0.0-alpha9",
         "elegant-view": "~0.9.0",
+        "extend": "~1.1.3",
         "mkdirp": "~0.3.5",
         "node-static": "~0.7.2",
+        "ncp": "~0.4.2",
+        "mysql": "~2.0.0-alpha9",
         "require-all": "~0.0.8",
         "session-manager": "~0.1.0",
-        "swig": "~1.0.0",
-        "trimmer": "~0.0.3"
+        "trimmer": "~0.0.3",
+        "swig": "~1.0.0"
     },
     "devDependencies": {},
     "scripts": {
