--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
     "main": "index.js",
     "dependencies": {
         "clone": "~0.1.11",
-        "commander": "~2.1.0",
+        "commander-plus": "~0.0.6",
+        "elegant-config": "~0.9.0",
         "elegant-controller": "~0.9.0",
         "elegant-error": "~0.9.0",
         "elegant-file": "~0.9.0",
         "elegant-interceptor": "~0.9.0",
-        "elegant-redirect": "~0.9.0",
-        "elegant-config": "~0.9.0",
         "elegant-sync": "~0.9.0",
         "elegant-view": "~0.9.0",
+        "elegant-redirect": "~0.9.0",
         "extend": "~1.1.3",
         "mkdirp": "~0.3.5",
         "node-static": "~0.7.2",
+        "mysql": "~2.0.0-rc2",
         "ncp": "~0.4.2",
-        "mysql": "~2.0.0-alpha9",
-        "require-all": "~0.0.8",
         "session-manager": "~0.1.0",
-        "trimmer": "~0.0.3",
-        "swig": "~1.0.0"
+        "require-all": "~0.0.8",
+        "swig": "~1.0.0",
+        "trimmer": "~0.0.3"
     },
     "devDependencies": {},
     "scripts": {
@@ -36,12 +36,22 @@
         "web",
         "nodejs"
     ],
-    "author": "hasan,fareed",
+    "author": {
+        "name": "elegant team"
+    },
     "license": "GPL Version 3",
     "bugs": {
         "url": "https://github.com/digital-flowers/livejs/issues"
     },
     "bin": {
         "elegant": "./bin/elegant.js"
-    }
+    },
+    "readme": "elegant webframework based on nodejs\n",
+    "readmeFilename": "README.md",
+    "homepage": "https://github.com/digital-flowers/livejs",
+    "_id": "elegant@0.9.3",
+    "dist": {
+        "shasum": "26bf20f3a9b0a0057398fad78c476ab393ae67f4"
+    },
+    "_from": "elegant"
 }
