--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "elegant-view": "~0.9.0",
         "elegant-sync": "~0.9.0",
         "extend": ">=2.0.2",
-        "mysql": "~2.0.1",
+        "mysql": ">=2.14.0",
         "html-minifier": "~0.5.4",
         "mkdirp": "~0.3.5",
         "ncp": "~0.4.2",
